<resources>
    <string name="app_name">ble_sofa_app</string>
    <string name="scan_header">Scan BLE Devices</string>
    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="connected">State: Connected</string>
    <string name="disconnected">State: Disconnected</string>
    <string name="relay1_on">Turn Relay1 ON</string>
    <string name="relay1_off">Turn Relay1 OFF</string>
    <string name="relay2_on">Turn Relay2 ON</string>
    <string name="relay2_off">Turn Relay2 OFF</string>
</resources>