<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/connect_label"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_header"
        android:visibility="visible"
        tools:text="Scan BLE Devices"
        tools:visibility="visible" />

    <Button
        android:id="@+id/scanBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_scan"
        android:visibility="visible"
        tools:text="Start Scan"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/connectionState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disconnected" />

    <ListView
        android:id="@+id/bleDevicesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/relay1Btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/relay1_on"
            android:visibility="visible"
            tools:text="Relay1 On"
            tools:visibility="visible" />

        <Button
            android:id="@+id/relay2Btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/relay2_on"
            android:visibility="visible"
            tools:text="Relay2 On"
            tools:visibility="visible" />

    </LinearLayout>

</LinearLayout>